# LLM_POC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Agentic/: agent.py  completion_layout.py  routine_handoff.ipynb  tools.py
